--- a/basic/index.html
+++ b/basic/index.html
@@ -9,7 +9,8 @@
   <body>
     <body>
     <ar-scene>
-      <a-entity id="helloworld" position="0 -1 -1" sound="src: river.mp3; autoplay: true">
+      <a-entity id="helloworld" position="0 -1 -8">
+        <a-sound src="src: url(click.mp3)" autoplay="true" position="0 2 5"></a-sound>
       <a-sphere position="0 1.25 -1" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-box position="-1 0.5 1" rotation="0 45 0" width="1" height="1" depth="1"  color="#4CC3D9"></a-box>
       <a-cylinder position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
